# khonliang-developer

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  config.yaml  deploy.yaml.example  pyproject.toml
developer/: __init__.py  agent.py  bug_store.py  config.py  dev_repo_store.py  dogfood_store.py  fr_drafting.py  fr_store.py  git_client.py  github_client.py  integration_scan.py  link_integrity.py  milestone_store.py  pipeline.py  pr_review_loop.py  pr_watcher.py  project_ecosystem.py  project_store.py  repo_hygiene.py  researcher_agent.py  researcher_client.py  server.py  session_checkpoint.py  specs.py  tests_runner.py
developer/migrations/: __init__.py  fr_data_from_researcher.py  normalize_legacy_fr_descriptions.py
docs/: ecosystem-audit-matrix.md  ecosystem-functional-boundaries.md  repo-boundary-audit.md  repo-hygiene-audit.md  researcher-librarian-spec-seed.md
milestones/MS-01/: code_review.md  milestone.md  review.md
prompts/: developer_guide.md
proposals/: true-north.md
proposals/architecture-review-2026-04-24/: bootstrap-dev-venv.sh  build_import_graphs.py  bus-dev-down.sh  bus-dev-up.sh  current.dot  dev-agents-down.sh  dev-agents-up.sh  import-graph-bus-depth1.dot  import-graph-bus-lib-depth1.dot  import-graph-bus-lib.dot  import-graph-bus.dot  import-graph-developer-depth1.dot  import-graph-developer.dot  import-graph-ollama-khonliang-depth1.dot  import-graph-ollama-khonliang.dot  import-graph-researcher-depth1.dot  import-graph-researcher-lib-depth1.dot  import-graph-researcher-lib.dot  import-graph-researcher.dot  import-graph-reviewer-depth1.dot  import-graph-reviewer-lib-depth1.dot  import-graph-reviewer-lib.dot  import-graph-reviewer.dot  inventory.md  migration-plan.md  proposed.dot  reset-dev-mirror.sh  runtime.dot  self-evaluation.md  setup-dev-mirror.sh  viewer_prototype.py
proposals/architecture-review-2026-04-26/: inventory.md
proposals/reviewer-framework/: README.md  proposal.md  v1-review.json  v2-review-ollama.json  v2-review.json
scripts/: link_integrity_sweep.py
specs/MS-01/: review.md  spec.md
specs/bus-mcp/: agents-review.md  agents.md  architecture.md  bus-agent-interaction-review.md  bus-agent-interaction.md  design.md  review.md  use-cases.md
tests/: conftest.py  test_agent.py  test_bug_store.py  test_catalog_wiring.py  test_config.py  test_dev_repo_store.py  test_dogfood_store.py  test_fr_drafting.py  test_fr_migration.py  test_fr_store.py  test_git_client.py  test_github_client.py  test_integration_scan.py  test_milestone_store.py  test_normalize_legacy_fr_descriptions.py  test_pipeline.py  test_pr_review_loop.py  test_pr_watcher.py  test_project_ecosystem.py  test_project_store.py  test_repo_hygiene.py  test_researcher_agent.py  test_researcher_client.py  test_server.py  test_session_checkpoint.py  test_specs.py  test_tests_runner.py
(+9 files in other folders)
